--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,12 +2,11 @@ name: Publish to Docker
 
 on:
   push:
-    branches: 
-      - main
+    branches: [main]
 
 permissions:
-  packages: write
   contents: read
+  packages: write
 
 jobs:
   publish:
@@ -15,21 +14,49 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghrc.io/EAliatis/publish-packages/game
-          tags: type=sha
+          # define la imagen explícitamente en minúsculas
+          images: |
+            ghcr.io/${{ github.repository_owner }}/publish-packages-game
+          tags: |
+            type=sha,format=long
+            # opcional: type=ref,event=branch
+
+      - name: Show computed tags (debug)
+        run: |
+          echo "TAGS:"
+          echo "${{ steps.meta.outputs.tags }}"
+          echo "IMAGES:"
+          echo "${{ steps.meta.outputs.images }}"
+
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build Container
+
+      # Si tu Dockerfile parte de una imagen privada en Docker Hub,
+      # descomenta y configura este login extra:
+      # - name: Login to Docker Hub (if needed)
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: docker.io
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build & Push
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          # opcional si tu registry no soporta attestations:
+          # provenance: false
